[metadata]
name = asdl-adt
version = attr: asdl_adt.__version__
description = Compiler IR tools
long-description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/ChezJrk/asdl
author = VCLS (Visual Computing Languages & Systems)
maintainer = Alex Reinking
maintainer-email = alex_reinking@berkeley.edu
license = MIT License
keywords = adt, asdl, development, compilers, ir
python-required =
    >=3.5, <4
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers',
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires =
    asdl

[options.packages.find]
where = src

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps = -r{toxinidir}/requirements.txt
commands = pytest --cov=./ --cov-report=xml
