[metadata]
name = asdl-adt
version = attr: asdl_adt.__version__
description = Compiler IR tools
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/ChezJrk/asdl
;author = VCLS (Visual Computing Languages & Systems)
;author_email = TBD
maintainer = Alex Reinking
maintainer_email = alex_reinking@berkeley.edu
license = MIT License
keywords = adt, asdl, development, compilers, ir
python_required =
    >=3.8, <4
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires =
    asdl
    attrs

[options.packages.find]
where = src

[pylint.MASTER]
load-plugins =
    pylint.extensions.docparams
    pylint.extensions.docstyle

[pylint.FORMAT]
max-line-length = 88

[pylint.'MESSAGES CONTROL']
disable =
    fixme

[pylint.IMPORTS]
known-third-party = asdl

[tox:tox]
envlist = py38, py39, py310, py311
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps = -r{toxinidir}/requirements.txt
commands = pytest --cov=./ --cov-report=xml
